--- a/Task_3/assets/css/style.css
+++ b/Task_3/assets/css/style.css
@@ -165,7 +165,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 100px;
+  padding: 100px 0px;
 }
 
 .info-left {
@@ -187,4 +187,143 @@
 
 .see-btn {
   padding-left: 66px;
+}
+
+/* Contact Section */
+
+#contact-section {
+  padding-bottom: 100px;
+}
+
+.contact-c {
+  display: flex;
+  justify-content: center;
+}
+
+.contact-box {
+  border: 1px solid var(--font-color);
+  border-radius: 10px;
+  background-color: var(--font-color);
+  width: 800px;
+  padding: 30px 30px;
+}
+
+.c-ht {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+
+.c-ht h2 {
+  border-bottom: 2px solid var(--sp-color);
+  width: 205px;
+}
+
+.contact-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contact-right,
+.contact-left {
+  width: 400px;
+  padding: 0px 20px;
+}
+
+.c-p {
+  padding-bottom: 20px;
+}
+
+.c-input {
+  font-family: poppins;
+  width: 100%;
+  height: 20px;
+  border: none;
+  box-sizing: border-box;
+  color: var(--sp-font-color);
+}
+
+.c-e {
+  font-family: poppins;
+  width: 100%;
+  height: 46px;
+  box-sizing: border-box;
+  color: var(--sp-font-color);
+}
+
+.c-text {
+  font-family: poppins;
+  width: 100%;
+  height: 200px;
+  border: 1px solid var(--sp-font-color);
+  box-sizing: border-box;
+  color: var(--sp-font-color);
+}
+
+.s-bt {
+  padding-top: 12px;
+}
+
+.send-bt {
+  background-color: var(--sp-color);
+  border: 1px solid var(--sp-color);
+  border-radius: 5px;
+  width: 100%;
+  height: 50px;
+  font-size: 15px;
+  color: var(--font-color);
+}
+
+.c-wrapper {
+  display: flex;
+  gap: 20px;
+  padding-bottom: 20px;
+  align-items: start;
+}
+
+.social-icon {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+}
+
+.contact-left {
+  padding-top: 30px;
+}
+
+/*Footer Container */
+
+#footer-container {
+  background-color: var(--sp-color);
+  color: white;
+  padding-top: 100px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 50px;
+}
+.f-right h5 {
+  padding-top: 20px;
+  font-weight: 400;
+  letter-spacing: 2px;
+}
+.f-left {
+  display: flex;
+  gap: 150px;
+  align-items: center;
+}
+
+.f-copy {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 20px;
+  align-items: center;
+}
+
+.f-copy-left h4 {
+  font-weight: 400;
 }
